correctif css pour rendre le bouton invisible

--- a/src/components/ComponentMain/GlobalContainer.css
+++ b/src/components/ComponentMain/GlobalContainer.css
@@ -78,6 +78,8 @@
 .fake-button {
   border: none;
   background: none;
+  margin: 0;
+  padding: 0;
 }
 .absolute {
   position: absolute;
